--- a/notation-parent/notation-webapi/pom.xml
+++ b/notation-parent/notation-webapi/pom.xml
@@ -1,18 +1,25 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.notation.back</groupId>
-    <artifactId>notation-parent</artifactId>
-    <version>1.0.0</version>
-  </parent>
-  <artifactId>notation-webapi</artifactId>
-  <name>notation-webapi</name>
-  <url>http://maven.apache.org</url>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-  <dependencies>
-  </dependencies>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.notation.back</groupId>
+		<artifactId>notation-parent</artifactId>
+		<version>1.0.0</version>
+	</parent>
+	<artifactId>notation-webapi</artifactId>
+	<name>notation-webapi</name>
+	<packaging>war</packaging>
+	<url>http://maven.apache.org</url>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+	<dependencies>
+		<dependency>
+			<artifactId>notation-business</artifactId>
+			<groupId>com.notation.back</groupId>
+			<version>${project.version}</version>
+		</dependency>
+	</dependencies>
 </project>
