NOTA-2 > environnement social et politique indicateurs par parameters

--- a/notation-parent/notation-dao/src/main/resources/global-config.properties
+++ b/notation-parent/notation-dao/src/main/resources/global-config.properties
@@ -21,3 +21,11 @@ hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.format_sql=false
 hibernate.show_sql=true
 hibernate.generate_statistics=true
+
+#Queries
+indicators.by.parameters=SELECT i.indicatorValue, il.indicatorName, cat.categoryName, t.year, c.countryName FROM Indicators i  join i.country c join i.time t join i.indicatorLabel il join il.category cat where 1=1 
+time.parameter.condition= \tAND t.year =  
+indicator.parameter.condition= \tAND il.indicatorName = '%s'
+category.parameter.condition= \tAND cat.categoryName = '%s'
+country.parameter.condition= \tAND c.countryName = '%s'
+orderby.clause= \tGROUP BY c.countryName, t.year, cat.categoryName, il.indicatorName, i.indicatorValue
